# VocaFSRS

./: .gitignore  .mailmap  LICENSE  README.md  install.ps1  install.sh  start.ps1  start.sh
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: config.py  constants.py  database.py  llm_adjudicator.py  models.py  reset_db.py  schemas.py  seed.py  seed_large.py  seed_mistakes_export.py  seed_study.py  utils.py
backend/app/routers/: import_csv.py  llm_settings.py  maintenance.py  notification_settings.py  placement.py  review_data.py  study.py
backend/app/services/: deck_scope.py  distractors.py  import_analysis.py  import_commit.py  import_contracts.py  import_files.py  llm_settings.py  mistake_exports.py  notification_settings.py  notifications.py  placement_activation.py  placement_audit_answers.py  placement_audit_items.py  placement_audits.py  placement_candidates.py  placement_event_state.py  placement_gate.py  placement_projection.py  review_scheduler.py  study_answers.py  study_availability.py  study_plan.py  time.py  (+2 more)
backend/migrations/: env.py
backend/scripts/: import_vocabulary.py
backend/tests/: conftest.py  study_support.py  test_cache_headers.py  test_chunk_and_uuid.py  test_import.py  test_import_files.py  test_imported_vocabulary_flow.py  test_installer_scripts.py  test_llm_adjudicator.py  test_llm_settings.py  test_mistakes_export.py  test_notifications.py  test_placement.py  test_placement_contracts.py  test_removed_routes.py  test_restart_integration.py  test_study_adjudication.py  test_study_fsrs.py  test_study_sessions.py
(+95 files in other folders)
