[project]
name = "vocafsrs-backend"
version = "0.1.0"
description = "Self-hosted FSRS vocabulary trainer with free-text recall and LLM grading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.137.1",
    "fsrs>=6.3.1",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
